--- a/services/nextjs/package.json
+++ b/services/nextjs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build --turbopack",
+    "build": "DATABASE_URL=${DATABASE_URL:-mysql://user:pass@localhost:3306/db} prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "prisma:generate": "prisma generate",
