--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         run: npm run build
         env:
           NEXT_TELEMETRY_DISABLED: 1
+          yamllint: disable-line rule:context-access
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Check build output
