--- a/deploy/k8s/overlays/prod/resourcequota.yaml
+++ b/deploy/k8s/overlays/prod/resourcequota.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: jaejadle
 spec:
   hard:
-    requests.memory: "1536Mi"
-    requests.cpu: "900m"
-    limits.memory: "3Gi"
-    limits.cpu: "1800m"
+    requests.memory: "400Mi"
+    requests.cpu: "150m"
+    limits.memory: "800Mi"
+    limits.cpu: "400m"
     pods: "9"
