--- a/deploy/k8s/base/kustomization.yaml
+++ b/deploy/k8s/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
+  - sealed-jaejadle-secret.yaml
 
 commonLabels:
   app.kubernetes.io/name: jaejadle
