FEAT(config): add sealed secret for dev environment

--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ../../base
   - resourcequota.yaml
   - namespace.yaml
+  - sealed-jaejadle-secret.yaml
 
 commonLabels:
   environment: development
