REFACTOR(app): move sealed secrets to overlay directories for proper ...

--- a/deploy/k8s/overlays/prod/kustomization.yaml
+++ b/deploy/k8s/overlays/prod/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: jaejadle
 resources:
   - ../../base
   - resourcequota.yaml
+  - sealed-jaejadle-secret.yaml
 
 commonLabels:
   environment: production
