--- a/services/nextjs/package.json
+++ b/services/nextjs/package.json
@@ -29,6 +29,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-spinners": "^0.17.0"
   },
   "devDependencies": {
