inject next_public

--- a/deploy/docker/Dockerfile.prod
+++ b/deploy/docker/Dockerfile.prod
@@ -23,6 +23,9 @@ ARG DATABASE_URL="mysql://build:build@localhost:3306/build"
 RUN npx prisma generate
 
 # Build the application
+# Next.js NEXT_PUBLIC_* variables must be available at build time
+ARG NEXT_PUBLIC_KAKAO_MAP_KEY
+ENV NEXT_PUBLIC_KAKAO_MAP_KEY=$NEXT_PUBLIC_KAKAO_MAP_KEY
 ENV NEXT_TELEMETRY_DISABLED=1
 RUN npm run build
 
