--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,10 @@ coverage
 
 # next.js
 services/nextjs/.next/
-.next/
-/out/
+services/nextjs/out/
 
 # production
-/build
+services/nextjs/build
 
 # misc
 .DS_Store
@@ -41,14 +40,13 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+services/nextjs/tsconfig.tsbuildinfo
+services/nextjs/next-env.d.ts
 
 # prisma
-/prisma/dev.db
-/prisma/dev.db-journal
-/prisma/*.db
-/prisma/*.db-journal
 services/nextjs/prisma/client
+services/nextjs/prisma/*.db
+services/nextjs/prisma/*.db-journal
 
 # IDE
 .vscode
