--- a/services/nextjs/package.json
+++ b/services/nextjs/package.json
@@ -24,10 +24,10 @@
     "lucide-react": "^0.548.0",
     "mime-types": "^3.0.2",
     "mysql2": "^3.15.3",
-    "next": "15.5.5",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-spinners": "^0.17.0"
@@ -46,6 +46,6 @@
     "eslint-config-next": "15.5.5",
     "prisma": "^6.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.7"
   }
 }
