--- a/deploy/k8s/overlays/dev/sealed-jaejadle-secret.yaml
+++ b/deploy/k8s/overlays/dev/sealed-jaejadle-secret.yaml
@@ -10,7 +10,7 @@ stringData:
   next-public-kakao-map-key: "8188abb966f8b443ece648e0bbdb5354"
   aws-region: "ap-east-2"
   aws-s3-bucket-name: "jaejadle-dev-bucket"
-  aws-s3-bucket-url: "http://minio.minio.svc.cluster.local:9000"
-  aws-s3-endpoint: "http://minio.minio.svc.cluster.local:9000"
+  aws-s3-bucket-url: "https://s3.minio0213.kro.kr"
+  aws-s3-endpoint: "https://s3.minio0213.kro.kr"
   aws-access-key-id: "CipXaWugod1EVco0uosY"
   aws-secret-access-key: "xZy996LKZaPdZ05H6hMM5IT1a3jrM13osngjzAeu"
