CHORE(db): update prod database url to proxysql

--- a/deploy/k8s/overlays/prod/sealed-jaejadle-secret.yaml
+++ b/deploy/k8s/overlays/prod/sealed-jaejadle-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
   jwt-secret: "egorlkjhfdgblkhjgrfdJKHG25436879"
-  database-url: "mysql://root:root-password-change-me@mariadb-primary.mariadb.svc.cluster.local:3306/JaejadleDB"
+  database-url: "mysql://root:root-password-change-me@proxysql.mariadb.svc.cluster.local:6033/JaejadleDB"
   next-public-kakao-map-key: "8188abb966f8b443ece648e0bbdb5354"
   aws-region: "ap-east-2"
   aws-s3-bucket-name: "jaejadle-bucket"
