--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Log in to Gitea Container Registry
         run: |
-          echo "${{ secrets.GITEA_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GITEA_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin 2>&1 || true
+          docker login ${{ env.REGISTRY }} -u ${{ github.actor }} -p "${{ secrets.GITEA_TOKEN }}"
 
       - name: Lowercase repository name
         id: lowercase
