--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  REGISTRY: gitea0213.kro.kr
+  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -26,10 +26,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Gitea Container Registry
+      - name: Log in to GitHub Container Registry
         run: |
-          echo "${{ secrets.GITEA_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin 2>&1 || true
-          docker login ${{ env.REGISTRY }} -u ${{ github.actor }} -p "${{ secrets.GITEA_TOKEN }}"
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
 
       - name: Lowercase repository name
         id: lowercase
