--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Log in to GitHub Container Registry
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.githubregistry }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
 
       - name: Lowercase repository name
         id: lowercase
