--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -10,6 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  DOCKER_HOST: tcp://172.17.0.1:2375
 
 jobs:
   build-and-push:
