REFACTOR(app): migrate from sealed secrets to external secrets operator
- Add ServiceAccount for external-secrets
- Add SecretStore to connect with Vault
- Add ExternalSecret to replace sealed-jaejadle-secret
- Comment out sealed-jaejadle-secret in kustomization
- All secrets now managed in HashiCorp Vault

Benefits:
- No more manual encryption/decryption workflow
- Automatic secret rotation support
- Easier secret management via Vault UI
- Better security with centralized secret storage

--- a/deploy/k8s/base/kustomization.yaml
+++ b/deploy/k8s/base/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
+  - serviceaccount.yaml
+  - secretstore.yaml
 
 commonLabels:
   app.kubernetes.io/name: jaejadle
