--- a/deploy/k8s/overlays/prod/kustomization.yaml
+++ b/deploy/k8s/overlays/prod/kustomization.yaml
@@ -6,7 +6,8 @@ namespace: jaejadle
 resources:
   - ../../base
   - resourcequota.yaml
-  - sealed-jaejadle-secret.yaml
+  - externalsecret.yaml
+  # - sealed-jaejadle-secret.yaml  # Replaced by ExternalSecret
 
 commonLabels:
   environment: production
