Fix ExternalSecret key names to use kebab-case

--- a/deploy/k8s/overlays/prod/externalsecret.yaml
+++ b/deploy/k8s/overlays/prod/externalsecret.yaml
@@ -11,35 +11,35 @@ spec:
     name: jaejadle-secret
     creationPolicy: Owner
   data:
-    - secretKey: DATABASE_URL
+    - secretKey: database-url
       remoteRef:
         key: jaejadle/prod
         property: DATABASE_URL
-    - secretKey: AWS_S3_ENDPOINT
+    - secretKey: aws-s3-endpoint
       remoteRef:
         key: jaejadle/prod
         property: AWS_S3_ENDPOINT
-    - secretKey: AWS_ACCESS_KEY_ID
+    - secretKey: aws-access-key-id
       remoteRef:
         key: jaejadle/prod
         property: AWS_ACCESS_KEY_ID
-    - secretKey: AWS_SECRET_ACCESS_KEY
+    - secretKey: aws-secret-access-key
       remoteRef:
         key: jaejadle/prod
         property: AWS_SECRET_ACCESS_KEY
-    - secretKey: AWS_S3_BUCKET_NAME
+    - secretKey: aws-s3-bucket-name
       remoteRef:
         key: jaejadle/prod
         property: AWS_S3_BUCKET_NAME
-    - secretKey: AWS_REGION
+    - secretKey: aws-region
       remoteRef:
         key: jaejadle/prod
         property: AWS_REGION
-    - secretKey: JWT_SECRET
+    - secretKey: jwt-secret
       remoteRef:
         key: jaejadle/prod
         property: JWT_SECRET
-    - secretKey: NEXT_PUBLIC_KAKAO_MAP_KEY
+    - secretKey: next-public-kakao-map-key
       remoteRef:
         key: jaejadle/prod
         property: NEXT_PUBLIC_KAKAO_MAP_KEY
