--- a/deploy/argocd/application.yaml
+++ b/deploy/argocd/application.yaml
@@ -13,7 +13,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/Mayne0213/jaejadle.git
+    repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
     targetRevision: main
     path: deploy/k8s/overlays/prod
 
