FIX(app): jaejadle-dev SecretStore 설정 수정 및 구조 정리
- jaejadle-dev에 secretstore.yaml 추가 (role: jaejadle-dev)
- jaejadle-dev에 externalsecret.yaml 추가
- base에서 secretstore.yaml 제거 (각 overlay에서 정의)
- dev에서 sealed-jaejadle-secret.yaml 참조 제거
- prod에 secretstore.yaml 추가
- prod externalsecret에 deletionPolicy 추가

--- a/deploy/k8s/overlays/prod/kustomization.yaml
+++ b/deploy/k8s/overlays/prod/kustomization.yaml
@@ -6,8 +6,8 @@ namespace: jaejadle
 resources:
   - ../../base
   - resourcequota.yaml
+  - secretstore.yaml
   - externalsecret.yaml
-  # - sealed-jaejadle-secret.yaml  # Replaced by ExternalSecret
 
 commonLabels:
   environment: production
