--- a/deploy/k8s/overlays/dev/externalsecret.yaml
+++ b/deploy/k8s/overlays/dev/externalsecret.yaml
@@ -14,33 +14,33 @@ spec:
   data:
     - secretKey: database-url
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: DATABASE_URL
     - secretKey: aws-s3-endpoint
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: AWS_S3_ENDPOINT
     - secretKey: aws-access-key-id
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: AWS_ACCESS_KEY_ID
     - secretKey: aws-secret-access-key
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: AWS_SECRET_ACCESS_KEY
     - secretKey: aws-s3-bucket-name
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: AWS_S3_BUCKET_NAME
     - secretKey: aws-region
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: AWS_REGION
     - secretKey: jwt-secret
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: JWT_SECRET
     - secretKey: next-public-kakao-map-key
       remoteRef:
-        key: jaejadle/prod
+        key: jaejadle/dev
         property: NEXT_PUBLIC_KAKAO_MAP_KEY
