--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -7,7 +7,8 @@ resources:
   - ../../base
   - resourcequota.yaml
   - namespace.yaml
-  - sealed-jaejadle-secret.yaml
+  - secretstore.yaml
+  - externalsecret.yaml
 
 commonLabels:
   environment: development
