--- a/deploy/argocd/application.yaml
+++ b/deploy/argocd/application.yaml
@@ -15,22 +15,20 @@ spec:
   source:
     repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
     targetRevision: main
-    path: deploy/k8s/overlays/prod
+    path: .
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: jaejadle
+    namespace: argocd
 
   syncPolicy:
     automated:
-      prune: true      # 매니페스트에서 제거된 리소스 자동 삭제
-      selfHeal: true   # 클러스터에서 수동 변경 시 자동 복구
+      prune: true
+      selfHeal: true
       allowEmpty: false
 
     syncOptions:
-      - CreateNamespace=true  # namespace가 없으면 자동 생성
-      - PrunePropagationPolicy=foreground
-      - PruneLast=true
+      - CreateNamespace=true
 
     retry:
       limit: 5
