--- a/deploy/argocd/application.yaml
+++ b/deploy/argocd/application.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
     targetRevision: main
-    path: .
+    path: deploy/argocd
 
   destination:
     server: https://kubernetes.default.svc
