--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -15,7 +15,7 @@ commonLabels:
 
 # 이미지 태그 설정
 images:
-  - name: ghcr.io/mayne0213/jaejadle
+  - name: gitea0213.kro.kr/mayne0213/jaejadle
     newTag: develop-sha-4ee083aaf65377915ba7daf8d0eaa12fbc5e48df
 
 patchesStrategicMerge:
