--- a/deploy/k8s/base/deployment.yaml
+++ b/deploy/k8s/base/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: jaejadle-app
-          image: gitea0213.kro.kr/mayne0213/jaejadle:latest
+          image: gitea0213.kro.kr/bluemayne/jaejadle:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
