--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -15,7 +15,7 @@ commonLabels:
 
 # 이미지 태그 설정
 images:
-  - name: gitea0213.kro.kr/mayne0213/jaejadle
+  - name: gitea0213.kro.kr/bluemayne/jaejadle
     newTag: develop-sha-708cace5f541fe098c273b894c04a9d0ed7337ef
 
 patchesStrategicMerge:
