FEAT(app): add code var

--- a/deploy/k8s/overlays/dev/externalsecret.yaml
+++ b/deploy/k8s/overlays/dev/externalsecret.yaml
@@ -44,3 +44,7 @@ spec:
       remoteRef:
         key: jaejadle/dev
         property: NEXT_PUBLIC_KAKAO_MAP_KEY
+    - secretKey: code
+      remoteRef:
+        key: jaejadle/dev
+        property: CODE
