--- a/deploy/k8s/base/deployment.yaml
+++ b/deploy/k8s/base/deployment.yaml
@@ -70,6 +70,11 @@ spec:
                 secretKeyRef:
                   name: jaejadle-secret
                   key: next-public-kakao-map-key
+            - name: CODE
+              valueFrom:
+                secretKeyRef:
+                  name: jaejadle-secret
+                  key: code
           resources:
             requests:
               memory: "256Mi"
