--- a/deploy/k8s/overlays/prod/externalsecret.yaml
+++ b/deploy/k8s/overlays/prod/externalsecret.yaml
@@ -44,3 +44,7 @@ spec:
       remoteRef:
         key: jaejadle/prod
         property: NEXT_PUBLIC_KAKAO_MAP_KEY
+    - secretKey: code
+      remoteRef:
+        key: jaejadle/prod
+        property: CODE
