--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
 
           # Build the image
           docker build \
+            --build-arg NEXT_PUBLIC_KAKAO_MAP_KEY="${{ secrets.NEXT_PUBLIC_KAKAO_MAP_KEY }}" \
             -t $(echo "$TAGS" | head -n 1) \
             -f ./deploy/docker/Dockerfile.prod \
             ./services/nextjs
