--- a/deploy/k8s/base/deployment.yaml
+++ b/deploy/k8s/base/deployment.yaml
@@ -74,6 +74,8 @@ spec:
             requests:
               memory: "256Mi"
               cpu: "100m"
+            limits:
+              memory: "512Mi"
           livenessProbe:
             httpGet:
               path: /
