--- a/deploy/k8s/overlays/dev/deployment-patch.yaml
+++ b/deploy/k8s/overlays/dev/deployment-patch.yaml
@@ -12,5 +12,7 @@ spec:
         - name: jaejadle-app
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "50m"
+              memory: "50Mi"
+              cpu: "15m"
+            limits:
+              memory: "150Mi"
