--- a/deploy/k8s/overlays/prod/deployment-patch.yaml
+++ b/deploy/k8s/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,7 @@ spec:
         - name: jaejadle-app
           resources:
             requests:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "100Mi"
+              cpu: "25m"
+            limits:
+              memory: "200Mi"
