--- a/deploy/k8s/overlays/prod/kustomization.yaml
+++ b/deploy/k8s/overlays/prod/kustomization.yaml
@@ -14,7 +14,7 @@ commonLabels:
 
 # 이미지 태그 설정
 images:
-  - name: ghcr.io/mayne0213/jaejadle
+  - name: gitea0213.kro.kr/bluemayne/jaejadle
     newTag: main-sha-736a498a105216318f5cad97e921cb79977827d7
 
 patchesStrategicMerge:
