--- a/services/nextjs/package.json
+++ b/services/nextjs/package.json
@@ -26,11 +26,13 @@
     "mysql2": "^3.15.3",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
+    "placeholder": "^1.2.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "react-kakao-maps-sdk": "^1.2.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
