--- a/services/nextjs/package.json
+++ b/services/nextjs/package.json
@@ -32,7 +32,8 @@
     "react-hook-form": "^7.65.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-spinners": "^0.17.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "tailwindcss-safe-area": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
