REFACTOR(ci): migrate repourl from gitea to github

--- a/deploy/argocd/application-dev.yaml
+++ b/deploy/argocd/application-dev.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
+    repoURL: https://github.com/Mayne0213/jaejadle.git
     targetRevision: develop
     path: deploy/k8s/overlays/dev
   destination:
