--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -16,7 +16,7 @@ commonLabels:
 
 # 이미지 태그 설정
 images:
-  - name: gitea0213.kro.kr/bluemayne/jaejadle
+  - name: github.com/Mayne0213/jaejadle
     newTag: develop-sha-9b46e0e08f9d9c4194274fcc1b4b0d6239b4c067
 
 patchesStrategicMerge:
