--- a/deploy/argocd/application-prod.yaml
+++ b/deploy/argocd/application-prod.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
+    repoURL: https://github.com/Mayne0213/jaejadle.git
     targetRevision: main
     path: deploy/k8s/overlays/prod
   destination:
