--- a/deploy/argocd/application.yaml
+++ b/deploy/argocd/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jaejadle
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: jaejadle=gitea0213.kro.kr/bluemayne/jaejadle
+    argocd-image-updater.argoproj.io/image-list: jaejadle=github.com/Mayne0213/jaejadle
     argocd-image-updater.argoproj.io/jaejadle.update-strategy: latest
     argocd-image-updater.argoproj.io/write-back-method: argocd
   finalizers:
@@ -13,7 +13,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitea0213.kro.kr/bluemayne/jaejadle.git
+    repoURL: https://github.com/Mayne0213/jaejadle.git
     targetRevision: main
     path: deploy/argocd
 
