Fix develop branch: ghcr.io, ClusterSecretStore, remove nginx annotations

--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -7,7 +7,6 @@ resources:
   - ../../base
   - resourcequota.yaml
   - namespace.yaml
-  - secretstore.yaml
   - externalsecret.yaml
   - ingress.yaml
 
@@ -16,7 +15,7 @@ commonLabels:
 
 # 이미지 태그 설정
 images:
-  - name: github.com/Mayne0213/jaejadle
+  - name: ghcr.io/mayne0213/jaejadle
     newTag: develop-sha-e4ec90552931228f9c49aa1cc460cf562eeaeb3d
 
 patchesStrategicMerge:
