--- a/deploy/k8s/overlays/dev/externalsecret.yaml
+++ b/deploy/k8s/overlays/dev/externalsecret.yaml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: jaejadle-secret
@@ -6,7 +6,7 @@ spec:
   refreshInterval: 1h
   secretStoreRef:
     name: vault-backend
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: jaejadle-secret
     creationPolicy: Owner
